Update time zone handling

--- a/app/views/shared/_event_form.html.erb
+++ b/app/views/shared/_event_form.html.erb
@@ -18,11 +18,13 @@
       <%= f.text_field :tag_list, value: @event.tag_list %>
     </div>
     <% Time.zone = "Eastern Time (US & Canada)" %>
-    <% if @event.event_start then start_value = @event.event_start else start_value = Time.zone.now end %>
-    <% if @event.event_end then end_value = @event.event_end else start_value = Time.zone.now end %>
+    <% if @event.event_start then start_value = @event.event_start else start_value = Time.now.utc.in_time_zone("Eastern Time (US & Canada)")
+ end %>
+    <% if @event.event_end then end_value = @event.event_end else end_value = Time.now.utc.in_time_zone("Eastern Time (US & Canada)")
+ end %>
     <div class="form-group">
       <label>Start</label>
-      <%= f.datetime_select :event_start, value: start_value %>
+      <%= f.datetime_select :event_start, default: 0.days.from_now.in_time_zone("Eastern Time (US & Canada)"), value:start_value %>
     </div>
     <div class="form-group">
       <label>End</label>
