--- a/app/views/shared/_event_form.html.erb
+++ b/app/views/shared/_event_form.html.erb
@@ -18,17 +18,17 @@
       <%= f.text_field :tag_list, value: @event.tag_list %>
     </div>
     <% Time.zone = "Eastern Time (US & Canada)" %>
-    <% if @event.event_start then start_value = @event.event_start.in_time_zone("Eastern Time (US & Canada)") else start_value = Time.now.utc.in_time_zone("Eastern Time (US & Canada)")
+    <% if @event.event_start then start_value = @event.event_start else start_value = Time.now
  end %>
-    <% if @event.event_end then end_value = @event.event_end.in_time_zone("Eastern Time (US & Canada)") else end_value = Time.now.utc.in_time_zone("Eastern Time (US & Canada)")
+    <% if @event.event_end then end_value = @event.event_end else end_value = Time.now
  end %>
     <div class="form-group">
       <label>Start</label>
-      <%= f.datetime_select :event_start, default: 0.days.from_now.in_time_zone("Eastern Time (US & Canada)"), value:start_value %>
+      <%= f.datetime_select :event_start, default: 0.days.from_now.in_time_zone("Eastern Time (US & Canada)"), value:start_value.in_time_zone("Eastern Time (US & Canada)") %>
     </div>
     <div class="form-group">
       <label>End</label>
-      <%= f.datetime_select :event_end, 0.days.from_now.in_time_zone("Eastern Time (US & Canada)"),value: end_value %>
+      <%= f.datetime_select :event_end, 0.days.from_now.in_time_zone("Eastern Time (US & Canada)"),value: end_value.in_time_zone("Eastern Time (US & Canada)") %>
     </div>
     <%= f.submit 'Post', :data => {:disable_with => "Saving..."}, class: 'btn btn-primary' %>
 <% end %>
