--- a/app/views/shared/_event_form.html.erb
+++ b/app/views/shared/_event_form.html.erb
@@ -17,18 +17,27 @@
       <%= f.label :tag_list, 'Tags (separated by commas)' %><br />
       <%= f.text_field :tag_list, value: @event.tag_list %>
     </div>
-    <% Time.zone = "Eastern Time (US & Canada)" %>
+
+    <div class="form-group">
+
     <% if @event.event_start then start_value = @event.event_start else start_value = Time.now
  end %>
     <% if @event.event_end then end_value = @event.event_end else end_value = Time.now
  end %>
-    <div class="form-group">
+ 
+    <%= f.time_zone_select(:time_zone, ActiveSupport::TimeZone.us_zones, default: "Eastern Time (US & Canada)") %>
       <label>Start</label>
-      <%= f.datetime_select :event_start, default: 0.days.from_now.in_time_zone("Eastern Time (US & Canada)"), value:start_value.in_time_zone("Eastern Time (US & Canada)") %>
+      <% Time.use_zone(@time_zone) do %>
+      <%= f.datetime_select :event_start, default: 0.days.from_now.in_time_zone(@time_zone), value:start_value.in_time_zone(@time_zone) %>
+      <% end %>
+    
     </div>
+
     <div class="form-group">
       <label>End</label>
-      <%= f.datetime_select :event_end, 0.days.from_now.in_time_zone("Eastern Time (US & Canada)"),value: end_value.in_time_zone("Eastern Time (US & Canada)") %>
+      <% Time.use_zone(@time_zone) do %>
+      <%= f.datetime_select :event_end, default: 0.days.from_now.in_time_zone(@time_zone),value: end_value.in_time_zone(@time_zone) %>
+      <% end %>
     </div>
     <%= f.submit 'Post', :data => {:disable_with => "Saving..."}, class: 'btn btn-primary' %>
 <% end %>
