Update _events_shared_form to include time_zones, added time_zones to events

--- a/app/views/shared/_event_form.html.erb
+++ b/app/views/shared/_event_form.html.erb
@@ -24,10 +24,11 @@
  end %>
     <% if @event.event_end then end_value = @event.event_end else end_value = Time.now
  end %>
- 
+
     <%= f.time_zone_select(:time_zone, ActiveSupport::TimeZone.us_zones, default: "Eastern Time (US & Canada)") %>
+    <% @time_zone = @event.time_zone %>
       <label>Start</label>
-      <% Time.use_zone(@time_zone) do %>
+      <% Time.use_zone(@event.time_zone) do %>
       <%= f.datetime_select :event_start, default: 0.days.from_now.in_time_zone(@time_zone), value:start_value.in_time_zone(@time_zone) %>
       <% end %>
     
@@ -35,7 +36,7 @@
 
     <div class="form-group">
       <label>End</label>
-      <% Time.use_zone(@time_zone) do %>
+      <% Time.use_zone(@event.time_zone) do %>
       <%= f.datetime_select :event_end, default: 0.days.from_now.in_time_zone(@time_zone),value: end_value.in_time_zone(@time_zone) %>
       <% end %>
     </div>
