--- a/app/views/shared/_event_form.html.erb
+++ b/app/views/shared/_event_form.html.erb
@@ -23,28 +23,29 @@
     
 
     <%= f.time_zone_select(:time_zone, ActiveSupport::TimeZone.us_zones, default: "Eastern Time (US & Canada)") %>
-    <% Time.zone = @event.time_zone %>
 
-    <% if @event.event_start then start_value = @event.event_start else start_value = Time.zone.now
- end %>
-    <% if @event.event_end then end_value = @event.event_end else end_value = Time.zone.now
- end %>
+    <% if not @event.event_start
+         @event.event_start = 1.hour.from_now.in_time_zone(@event.time_zone).change(min: 0)
+       else
+         @event.event_start = @event.event_start.in_time_zone(@event.time_zone)#+= Time.now.in_time_zone(@event.time_zone).utc_offset
+       end %>
+    <% if not @event.event_end
+         @event.event_end = 2.hour.from_now.in_time_zone(@event.time_zone).change(min: 0)
+       else
+         @event.event_end = @event.event_end.in_time_zone(@event.time_zone)#Time.now.in_time_zone(@event.time_zone).utc_offset
+       end %>
 
       <label>Start</label>
-      <% Time.use_zone(@event.time_zone) do %>
-      <%= f.datetime_select :event_start, 
-            default: 0.days.from_now.in_time_zone(Time.zone.name), 
-            value:start_value.in_time_zone(Time.zone.name),
+      <%= f.datetime_select :event_start,  
+            #value:start_value.in_time_zone(Time.zone.name),
             offset: Time.zone.utc_offset %>
-      <% end %>
     
     </div>
 
     <div class="form-group">
       <label>End</label>
-      <% Time.use_zone(@event.time_zone) do %>
-      <%= f.datetime_select :event_end, default: 0.days.from_now.in_time_zone(Time.zone.name),value: end_value.in_time_zone(Time.zone.name), offset: Time.zone.utc_offset %>
-      <% end %>
+      <%= f.datetime_select :event_end, 
+            offset: Time.zone.utc_offset %>
     </div>
     <%= f.submit 'Post', :data => {:disable_with => "Saving..."}, class: 'btn btn-primary' %>
 <% end %>
