Update events_controller and _event_form.html.erb to correctly update time

--- a/app/views/shared/_event_form.html.erb
+++ b/app/views/shared/_event_form.html.erb
@@ -24,18 +24,21 @@
 
     <%= f.time_zone_select(:time_zone, ActiveSupport::TimeZone.us_zones, default: "Eastern Time (US & Canada)") %>
 
+    <%= @event.time_zone %>
     <% if not @event.event_start
          @event.event_start = 1.hour.from_now.in_time_zone(@event.time_zone).change(min: 0)
        else
-         @event.event_start = @event.event_start.in_time_zone(@event.time_zone)#+= Time.now.in_time_zone(@event.time_zone).utc_offset
+         @event.event_start += Time.now.in_time_zone(@event.time_zone).utc_offset
+         #@event.event_start = @event.event_start.in_time_zone(@event.time_zone)
        end 
-       @event.event_start += Time.now.in_time_zone(@event.time_zone).utc_offset %>
+        %>
     <% if not @event.event_end
          @event.event_end = 2.hour.from_now.in_time_zone(@event.time_zone).change(min: 0)
        else
-         @event.event_end = @event.event_end.in_time_zone(@event.time_zone)#Time.now.in_time_zone(@event.time_zone).utc_offset
+         @event.event_end += Time.now.in_time_zone(@event.time_zone).utc_offset
+         #@event.event_end = @event.event_end.in_time_zone(@event.time_zone)
        end 
-       @event.event_end += Time.now.in_time_zone(@event.time_zone).utc_offset%>
+       %>
 
       <label>Start</label>
       <%= f.datetime_select :event_start,  
