--- a/app/views/shared/_event_form.html.erb
+++ b/app/views/shared/_event_form.html.erb
@@ -30,28 +30,23 @@
        else
          @event.event_start += time_offset
          #@event.event_start = @event.event_start.in_time_zone(@event.time_zone)
-       end 
-        %>
+       end %>
     <% if not @event.event_end
          @event.event_end = 2.hour.from_now.change(min: 0) + time_offset
        else
          @event.event_end += time_offset
          #@event.event_end = @event.event_end.in_time_zone(@event.time_zone)
-       end 
-       %>
+       end %>
 
       <label>Start</label>
-      <%= f.datetime_select :event_start,  
-            #value:start_value.in_time_zone(Time.zone.name),
-            offset: Time.zone.utc_offset %>
-    
+      <%= f.datetime_select :event_start %>   
     </div>
 
     <div class="form-group">
       <label>End</label>
-      <%= f.datetime_select :event_end, 
-            offset: Time.zone.utc_offset %>
+      <%= f.datetime_select :event_end %>
     </div>
+    
     <%= f.submit 'Post', :data => {:disable_with => "Saving..."}, class: 'btn btn-primary' %>
 <% end %>
 
