--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -8,7 +8,7 @@
 <p id="notice"><%= notice %></p>
 
 <div align="center">
-<%= image_tag ENV["URL"]+"badges/"+ Badge.find(@school.badge_id).file_name  %>
+<%= image_tag ENV["S3_BUCKET"]+Badge.find(@school.badge_id).file_name  %>
 </div>
 
 <% @fields.each do |key, value| %>
