--- a/app/views/static_pages/android.html.erb
+++ b/app/views/static_pages/android.html.erb
@@ -1,8 +1,8 @@
 <html>
 <head>
-	<meta property="al:android:url" content="fbshare://story/1234" />
+	<meta property="al:android:url" content="school-business://story/1234" />
 	<meta property="al:android:package" content="com.ceti_sb.android" />
-	<meta property="al:android:app_name" content="Ceti-SB" />
+	<meta property="al:android:app_name" content="School-Business" />
 	<meta property="og:title" content="title" />
 	<meta property="og:type" content="website" />
 </head>
