--- a/app/views/users/get_badge.html.erb
+++ b/app/views/users/get_badge.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, @user.name) %>
-	<meta property="al:android:url" 
-		content="school-business://main/users/#{@user.id}/badges/#{@user_badge.badge_id}" />
+	<% @android_url = "school-business://main/users/#{@user.id}/badges/#{@user_badge.badge_id}" %>
+	<meta property="al:android:url" content=<%= @android_url %>/>
 	<meta property="al:android:package" content="com.ceti_sb.android" />
 	<meta property="al:android:app_name" content="School-Business" />
 	<meta property="al:android:class" content="com.ceti_sb.android/.MainActivity" />
