--- a/app/views/users/get_badge.html.erb
+++ b/app/views/users/get_badge.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, @user.name) %>
+<html>
 <head>
 	<% @android_url = "school-business://main/users/#{@user.id}/badges/#{@user_badge.badge_id}" %>
 	<meta property="al:android:url" content=<%= @android_url %>/>
@@ -29,3 +30,4 @@
 		</div>
   </div>
 </div>
+</html>
