Update badge view with css update

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,6 +11,11 @@ $gray-medium-light: #eaeaea;
   box-sizing:         border-box;
 }
 
+@mixin box_shadow {
+  -moz-box-shadow: 0 0 2px black;
+  -webkit-box-shadow: 0 0 2px black;
+  box-shadow: 0 0 2px black;
+}
 /* universal */
 
 html {
