--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -7,9 +7,9 @@
   <p>Posted <%= time_ago_in_words(event.created_at) %> ago.</p>
 
 </div>
-      <aside class="col-xs-4 col-sm-4">
-  <%= image_tag ENV["S3_BUCKET"]+"badges/"+ Badge.find(School.find(event.loc_id).badge_id).file_name class: "img-responsive" %>  
-  </aside>
+<aside class="col-xs-4 col-sm-4">
+  <%= image_tag ENV["S3_BUCKET"]+"badges/"+ Badge.find(School.find(event.loc_id).badge_id).file_name, class: "img-responsive" %>  
+</aside>
 <div class="col-xs-6 col-md-6">
 <p><strong>Location: </strong> 
     <%= link_to handle_abbr(School.find(event.loc_id).school_name.titlecase), "/schools/#{event.loc_id}" %> </p>
