--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -53,10 +53,12 @@
       <% if current_user == event.user && !claim.confirmed_by_teacher %>
         <p> <%= button_to "Confirm #{claim.user.name} as speaker", teacher_confirm_claim_path(claim, :event_id => event.id), data: { confirm: 'Are you sure?' }, class: 'btn btn-primary btn-xs' %> </p>
       <% end %>
-      <% if current_user.id == claim.user_id && claim.confirmed_by_teacher && !claim.confirmed_by_speaker %>
-          <p> <%= button_to 'Confirm this speaking event', speaker_confirm_claim_path(claim, :event_id => event.id), data: { confirm: 'Are you sure?' }, class: 'btn btn-primary' %> </p>
+      <% if current_user.id == event.speaker_id then cancellation = 'Cancel Speaking Engagement' %>
+      <% if current_user.id == claim.user_id then cancellation = 'Cancel Claim' %>
+      <% if current_user.id == event.speaker_id or current_user.id == event.claim.user_id%>
+          <p> <%= button_to cancellation, {action: "cancel", controller: "claims", id: claim.id}, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-primary' %> </p>
       <% end %>
-      <% if current_user == event.user && claim.confirmed_by_teacher && claim.confirmed_by_speaker %>
+      <% if current_user == event.user && claim.confirmed_by_teacher %>
           <p> <%= button_to "Give badge to #{claim.user.name}", speaker_confirm_claim_path(claim, :event_id => event.id), data: { confirm: 'Are you sure?' }, class: 'btn btn-primary btn-xs' %> </p>
       <% end %>
   <% end %>
