--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,8 +6,8 @@
     </section>
   </aside>
   <div class="col-md-8">
-    <% if @events.any? %>
-        <h3>Events (<%= @events.count %>)</h3>
+    <% if @user.events.any? %>
+        <h3>Events (<%= @user.events.count %>)</h3>
         <ol class="events">
           <%= render @events.order(event_end: :desc).reverse %>
         </ol>
