--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -3,25 +3,34 @@
 
   <div class="col-xs-8 col-sm-8"> 
   <p><!--<strong>Title: </strong>-->
-  <h3><%= link_to event.title, event %></h3></p>
+    <h3><%= link_to event.title, event %></h3>
+  </p>
   <p>Posted <%= time_ago_in_words(event.created_at) %> ago.</p>
 
 </div>
 <aside class="col-xs-4 col-sm-4">
-  <%= image_tag ENV["S3_BUCKET"]+"badges/"+ Badge.find(School.find(event.loc_id).badge_id).file_name, class: "img-responsive" %>  
+  <%= image_tag ENV["S3_BUCKET"]+"badges/"+ Badge.find(School.find(event.loc_id).badge_id).file_name, 
+        class: "img-responsive" %>  
 </aside>
+
 <!-- Provide Badge Image -->
 <div class="col-xs-6 col-md-6">
-<p><strong>Location: </strong> 
-    <%= link_to handle_abbr(School.find(event.loc_id).school_name.titlecase), "/schools/#{event.loc_id}" %> </p>
-  <p><strong>Time:</strong> <%= event.present_time()  %></p>
+  <p>
+    <strong>Location: </strong> 
+    <%= link_to handle_abbr(School.find(event.loc_id).school_name.titlecase), "/schools/#{event.loc_id}" %> 
+  </p>
+  <p>
+    <strong>Time:</strong> <%= event.present_time()  %>
+  </p>
 </div>
   <div class="col-xs-6 col-md-6">
 
+    <!-- If the event has a speaker, display their name -->
   <p>
     <% if event.speaker_id > 0 %>
       <strong>Speaker: </strong>
       <%= User.find(event.speaker_id).name %>
+    <!-- If the event has claims, then display the claims -->
     <% else %>
       <% unless event.claims.each.nil? %>
         <strong>Claims: </strong>
@@ -30,9 +39,7 @@
     <% end %>
   </p>
   <p><strong>Organizer: </strong>
-    <%= link_to event.user.name, event.user %></p>
-
-  
+    <%= link_to event.user.name, event.user %></p>  
   </div>
   <div class="col-xs-12 col-md-12">
   <p><strong>Tags: </strong>
