Update footer shim to display Delphos City Schools and Straight A Fund

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -30,7 +30,12 @@
       <h1>Welcome to the School Business App</h1>
 
       <h2>
-        Developed by CETI at the Ohio State University.
+        Developed by 
+    <a href="http://http://www.ceti.cse.ohio-state.edu/">CETI</a> 
+    at the <a href="http://www.osu.edu/">Ohio State University</a>
+    in partnership with 
+    <a href="http://www.delphoscityschools.org/">Delphos City Schools</a>, and is funded by the 
+    <a href="http://education.ohio.gov/Topics/Straight-A-Fund/">Straight A Grant</a>.
       </h2>
 
       <%= link_to 'Sign up now!', new_user_registration_path, class: 'btn btn-lg btn-primary' %>
