Update a/v/e/_event.html.erb to define event_start as a an attr of an event to fix a bug with claimed events crashing

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -85,7 +85,7 @@
     <% elsif current_user.id == claim.user_id %>
       <% cancellation = 'Cancel Claim' %>
     <% end %>
-    <% if current_user.id == claim.user_id && event_start < Time.now %>
+    <% if current_user.id == claim.user_id && event.event_start < Time.now %>
       <p> 
         <%= button_to cancellation, 
               {action: "cancel", controller: "claims", id: claim.id}, 
