--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -49,13 +49,14 @@
   </div> <!-- column -->
 
   <p>
-    <% if (event.claims.where('confirmed_by_teacher = ?', true).count < 1) &&
-         (event.claims.where('user_id = ?', current_user.id).count < 1) &&
-         (event.user != current_user) %>
-        <%= button_to 'claim this event', 
+  <% if (event.start() > Time.now) &&
+        (event.claims.where('confirmed_by_teacher = ?', true).count < 1) &&
+        (event.claims.where('user_id = ?', current_user.id).count < 1) &&
+        (event.user != current_user) %>
+        <%= button_to 'Claim This Event', 
               claim_event_path(:event_id => event.id, :user_id => current_user.id), 
               data: { confirm: 'Are you sure?' }, 
-              class: 'btn btn-primary btn-xs' %>
+              class: 'btn btn-primary' %>
     <% end %>
   </p>
 
@@ -79,22 +80,23 @@
       </p>
     <% end %>
 
-    <!-- SET cancellation message & CREATE button depending on CLAIMER/SPEAKER -->
-    <% if current_user.id == event.speaker_id %>
-      <% cancellation = 'Cancel Speaking Engagement' %>
-    <% elsif current_user.id == claim.user_id %>
-      <% cancellation = 'Cancel Claim' %>
-    <% end %>
-    <% if current_user.id == claim.user_id && event.event_start < Time.now %>
-      <p> 
-        <%= button_to cancellation, 
+    <% if (event.start() > Time.now) %> 
+      <!-- SET cancellation message & CREATE button depending on CLAIMER/SPEAKER -->
+      <% if current_user.id == event.speaker_id %>
+       <% cancellation = 'Cancel Speaking Engagement' %>
+      <% elsif current_user.id == claim.user_id %>
+        <% cancellation = 'Cancel Claim' %>
+      <% end %>
+      <% if current_user.id == claim.user_id && event.event_start < Time.now %>
+        <p> 
+         <%= button_to cancellation, 
               {action: "cancel", controller: "claims", id: claim.id}, 
               method: :delete, 
               data: { confirm: 'Are you sure?' }, 
               class: 'btn btn-primary' %> 
-      </p>
+        </p>
+      <% end %>
     <% end %>
-
   <% end %>
   </p>
 
