--- a/app/views/events/_event_list.html.erb
+++ b/app/views/events/_event_list.html.erb
@@ -32,14 +32,16 @@
   <%= image_tag Badge.find(School.find(event.loc_id).badge_id).file.url class: "img-responsive" %>  
   </aside>
   <p>
-    <% if event.claims.where('confirmed_by_teacher = ?', true).count < 1 &&
+  <% if (not event.is_canceled) and event.start() > Time.now && 
+            event.claims.where('confirmed_by_teacher = ?', true).count < 1 &&
             event.claims.where('user_id = ?', current_user.id).count < 1 &&
             event.user != current_user%>
-        <%= button_to 'claim this event', claim_event_path(:event_id => event.id, :user_id => current_user.id), data: { confirm: 'Are you sure?' }, class: 'btn btn-primary btn-xs' %>
+        <%= button_to 'Claim This Event', claim_event_path(:event_id => event.id, :user_id => current_user.id), data: { confirm: 'Are you sure?' }, class: 'btn btn-primary btn-xs' %>
     <% end %>
   </p>
 
   <p>
+  <% if (not event.is_canceled) and event.start() > Time.now %>
   <% event.claims.each do |claim| %>
       <% if current_user == event.user && !claim.confirmed_by_teacher %>
         <p> <%= button_to "Confirm #{claim.user.name} as speaker", teacher_confirm_claim_path(claim, :event_id => event.id), data: { confirm: 'Are you sure?' }, class: 'btn btn-primary btn-xs' %> </p>
@@ -51,14 +53,16 @@
           <p> <%= button_to "Give badge to #{claim.user.name}", speaker_confirm_claim_path(claim, :event_id => event.id), data: { confirm: 'Are you sure?' }, class: 'btn btn-primary btn-xs' %> </p>
       <% end %>
   <% end %>
+<% end %>
   </p>
 
 
   <a>
-  <% if current_user == event.user %>
+    <% if (not event.is_canceled) and event.start() > Time.now and current_user == event.user %>
     <%= button_to 'Cancel The Event', event, data: { confirm: 'Are you sure?' }, method: :delete, class: 'btn btn-primary btn-xs' %>
-  <% else %>
-    <%= button_to 'Message The Organizer', :message, class:"btn-primary", method: :get %>    
+  <% elsif current_user != event.user %>
+    <%= button_to 'Message The Organizer', 
+      {action: "write_message", controller: "users", id: event.user_id}, class:"btn-primary", method: :get %>    
   <% end %>
   </a>
 
